center align vertically fixed

--- a/UI/main.css
+++ b/UI/main.css
@@ -17,8 +17,9 @@ body{
 }
 
 .center-vertical{
-    position: absolute;
+    position: relative;
     top: 50%;
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
